homelab/k8s/apps/code-server/service-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: dev
spec:
  selector:
    app: code-server
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server
  namespace: dev
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: code.winterfell.cluster.pi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: code-server
                port:
                  number: 8080
